Fix: reset button in search alignment

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -797,3 +797,7 @@ p:last-child {
 .DocSearch-Input{
   height: 92% !important;
 }
+
+.DocSearch-Reset{
+  margin-right: 4px !important;
+}
